@@ -1,10 +1,10 @@
-package com.Itstep.FitnessClub.service.Impl;
+package com.Itstep.FitnessClub.service.impl;
 
-import com.Itstep.FitnessClub.data.TrainingType;
+import com.Itstep.FitnessClub.mapper.TrainingMapper;
+import com.Itstep.FitnessClub.model.data.TrainingType;
 import com.Itstep.FitnessClub.model.dto.TrainingDto;
 import com.Itstep.FitnessClub.model.entity.Training;
-import com.Itstep.FitnessClub.mapper.TrainingMapper;
-import com.Itstep.FitnessClub.repository.TrainingRepositoryInterface;
+import com.Itstep.FitnessClub.repository.TrainingRepository;
 import com.Itstep.FitnessClub.service.ScheduleService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -12,7 +12,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * вывод расписания.
@@ -22,20 +21,18 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class ScheduleServiceImpl implements ScheduleService {
 
-    private final TrainingRepositoryInterface trainingRepository;
+    private final TrainingRepository trainingRepository;
     private final TrainingMapper trainingMapper;
 
     @Override
     public List<TrainingDto> getSchedule() {
         List<Training> trainings = trainingRepository.findAll();
-        return trainings.stream()
-                .map(trainingMapper::trainingToTrainingDto)
-                .collect(Collectors.toList());
+        return trainingCollectionToTrainingDto(trainings);
     }
 
     @Override
-    public List<TrainingDto> getScheduleByDate(LocalDateTime date) {
-        return getScheduleByRange(date, date);
+    public List<TrainingDto> getWeekSchedule(LocalDateTime date) {
+        return getScheduleByRange(date, date.plusDays(7));
     }
 
     @Override
@@ -45,16 +42,17 @@ public class ScheduleServiceImpl implements ScheduleService {
         }
         LocalDateTime from = start.withHour(0).withMinute(0).withSecond(0).withNano(0);
         LocalDateTime to = end.plusDays(1).withHour(0).withMinute(0).withSecond(0).withNano(0); // the end of the day is included
-        return trainingRepository.findByTrainingStartBetween(from, to)
-                .stream()
-                .map(trainingMapper::trainingToTrainingDto)
-                .toList();
+        return trainingCollectionToTrainingDto(trainingRepository.findByTrainingStartBetween(from, to));
     }
 
     @Override
-    public List<TrainingDto> getScheduleByTrainingName(TrainingType trainingName) {
-        return trainingRepository.findByTrainingType(trainingName).stream()
+    public List<TrainingDto> getScheduleByTrainingName(TrainingType trainingType) {
+        return trainingCollectionToTrainingDto(trainingRepository.findByTrainingType(trainingType));
+    }
+
+    private List<TrainingDto> trainingCollectionToTrainingDto(List<Training> trainings) {
+        return trainings.stream()
                 .map(trainingMapper::trainingToTrainingDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
